--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -136,3 +136,20 @@
       font-size: 20px;
       color: #000;
     }
+    .cart-button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 0;
+    }
+    
+    .cart-button svg {
+      width: 24px;
+      height: 24px;
+      fill: #000;
+    }
+    
+    .cart-button:focus {
+      outline: none;
+    }
+    
