--- a/Fiver/client/src/pages/gig/Gig.scss
+++ b/Fiver/client/src/pages/gig/Gig.scss
@@ -225,7 +225,7 @@
         }
   
         button{
-          background-color: #1dbf73;
+          background-color: #39B6B5;
           padding: 10px;
           color: white;
           font-weight: 500;
