--- a/Fiver/client/src/pages/myGigs/MyGigs.scss
+++ b/Fiver/client/src/pages/myGigs/MyGigs.scss
@@ -7,7 +7,7 @@
       width: 1400px;
       padding: 50px 0px;
       padding-bottom: 150px;
-  
+      margin-bottom: 300px;
       .title {
         display: flex;
         justify-content: space-between;
