--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -152,4 +152,17 @@
     .cart-button:focus {
       outline: none;
     }
+    .carts{
+      display: flex;
+        align-items: center;
+        justify-content: flex-end;
+          font-size: 20px;
+        }
+       .carts2{
+          width: 20px;
+            height: 21px;
+            padding-left: 10px;
+            font-size: 20px;
+       }
+        
     
