--- a/Fiver/client/src/pages/cart/cart.scss
+++ b/Fiver/client/src/pages/cart/cart.scss
@@ -57,3 +57,11 @@
     }
   }
 }
+button{
+background-color: #39B6B5;
+  color: white;
+  font-weight: 500;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+}
