--- a/Fiver/client/src/components/navbar/Navbar.scss
+++ b/Fiver/client/src/components/navbar/Navbar.scss
@@ -116,7 +116,8 @@
       color: white ;
       font-weight: 500;
       font-family: "Montserrat", sans-serif;
-    
+      margin-right: 30px;
+      margin-left: 30px;
     }
   }
     .cart-icon {
