--- a/Fiver/client/src/pages/login/Login.scss
+++ b/Fiver/client/src/pages/login/Login.scss
@@ -149,9 +149,9 @@
     font-size: 14px;
     cursor: pointer;
 }
-// .error {
-//     color: red;
-//     font-size: 16px;
-//     margin-top: 10px;
-//     font
-// }
+.error {
+    color: red;
+    font-size: 20px;
+    margin-top: 10px;
+    font-weight: 1000;
+}
