--- a/Fiver/client/src/pages/cart/cart.scss
+++ b/Fiver/client/src/pages/cart/cart.scss
@@ -58,10 +58,11 @@
   }
 }
 button{
-background-color: #39B6B5;
+background-color: #39b6b5;
   color: white;
   font-weight: 500;
   border: none;
-  padding: 10px;
+  padding: 12px 20px;
+  /* Increase the padding to make the button larger */
   cursor: pointer;
 }
